# Cigma-Sim

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  LICENSE  README.md  makefile  pyproject.toml
cigmasim/: __init__.py
cigmasim/config/: __init__.py  align.py  array.py  cycle.py  value.py
cigmasim/core/: __init__.py  align.py  count_array.py  count_cycle.py
cigmasim/simulator/: __init__.py  cycle_float_float.py  cycle_quant_quant.py  prepare.py  value_float_float.py  value_quant_quant.py
cigmasim/type/: __init__.py  dtype.py  encoding.py  float_type.py  quant_type.py  rounding.py  utils.py
container/: Dockerfile  container.mk
example/: __init__.py  bitlet.py  cigma.py  cnn.py  common.py  presets.py  profiler.py  resnet152.py  t5.py  transformer.py
example/architectures/: __init__.py  bitlet.py  cigma.py
scripts/: dev.mk  download_datasets.py
